# Kirjoitusvirheiden-korjaaja

./: .coveragerc  .pylintrc  README.md  pyproject.toml
.github/workflows/: main.yml
dokumentit/: kayttoohje.md  maarittely.md  testaus.md  toteutus.md
dokumentit/viikkoraportit/: viikkoraportti1.md  viikkoraportti2.md  viikkoraportti3.md  viikkoraportti4.md  viikkoraportti5.md  viikkoraportti6.md
src/: index.py
src/datastructures/: damerau_levenshtein.py  trie.py  trie_performance_testing.py
src/services/: damerau_levenshtein.py  levenshtein_distance.py  levenstein_distance.py  performance_testing.py  trie.py  vocabulary_service.py
src/tests/: trie_test.py  vocabulary_service_test.py
src/tests/datastructures/: damerau_levenshtein_test.py  trie_test.py
src/tests/services/: damerau_levenshtein_test.py  vocabulary_service_test.py
src/ui/: ui.py
src/vocabulary/: 200k_wiktionary_words.txt  modified_wiktionary.txt
